--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,11 +1,20 @@
 
 .btn{
-    position: relative;
-    left: 7rem;
-    top: 27rem;
-    width: 10rem;
-    height: 3rem;
-    text-align: center;
-    line-height: -2rem;
-    font-size: 1.2rem;
+position: relative;
+left: 7rem;
+top: 26rem;
+width: 10rem;
+height: 3rem;
+text-align: center;
+line-height: -2rem;
+font-size: 1.2rem;
+
+}
+#map-link {
+  text-align: center;
+  position: relative;
+  top: 1rem;
+  right: 0rem;
+  font-size: 1.5rem;
+  text-decoration: none;
 }
